# scillm

./: .gitignore  CHANGELOG.md  CONTEXT.md  COPILOT_REVIEW_TEMPLATE.md  COPILOT_STABILIZATION_PLAN.md  ENV_REFERENCE.md  FEATURES.md  Makefile  NEXT_STEPS.md  PROJECT_READY.md  PR_MERGE_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  REVIEW_REQUEST_CERTAINLY.md  REVIEW_REQUEST_SCILLM.md  SCILLM_DEPLOY.md  pyproject.toml  readiness.yml
.artifacts/: router_stub.yaml
.pr-venv/: pyvenv.cfg
debug/: certainly_batch_live.py  certainly_bridge_doctor.sh  certainly_mixed_10_live.py  check_codex_auth.py  chutes_curl_stream.sh  chutes_gateway_preflight.py  chutes_parallel_batch_min.py  codex_agent_doctor.py  codex_agent_minimal.py  codex_agent_reasoning_demo.py  codex_parallel_probe.py  copilot_request_option_a_fix.md  demo_scillm_code_mcts.py  demo_scillm_code_mcts_autogen_and_judge_verbose.py  demo_scillm_code_mcts_live.py  demo_scillm_text_multi.py  live_best_of_n_and_judge.py  live_best_of_n_chat.py  mini_agent_browser_test.html  mini_agent_curl.sh  print_provider_resolution.py  probe_codex_chat_models.py  retry_meta_probe.py  run_option_a_and_write_artifacts.py  scillm_agent_status_2025-10-21.md  scillm_openai_compatible_smoke.py  smoke_model_only_codex_agent.py  smoke_option_a_codex_only.py  smoke_option_a_minimal.py  verify_codex_agent_docker.py  verify_mini_agent.py
docker/: Dockerfile.bridge  compose.certainly.bridge.yml
docs/: TELEMETRY.md
examples/: codex_agent_router.py
feature_recipes/: CODEX_AGENT.md  GROUNDED_COMPARE.md  MCTS_CODEWORLD.md  MINI_AGENT.md  README.md  SIDE_BY_SIDE.md  codeworld_provider.py  codex_agent.py  lean4_bridge.py  lean4_bridge_client.py  lean4_provider.py  lean4_router_shim.py  parallel_acompletions.py
litellm/: QUICK_START.md  README.md  __init__.py  experimental_flags.py  main.py  router.py  utils.py
notebooks/: 00_quickstart.ipynb  01_chutes_openai_compatible.ipynb  01_chutes_openai_compatible_executed.ipynb  02_router_parallel_batch.ipynb  02_router_parallel_batch_executed.ipynb  03_model_list_first_success.ipynb  03_model_list_first_success_executed.ipynb  04_advanced_streaming_tools.ipynb  04a_tools_only.ipynb  04a_tools_only_executed.ipynb  04b_streaming_demo.ipynb  05_codex_agent_doctor.ipynb  05_codex_agent_doctor_executed.ipynb  06_mini_agent_doctor.ipynb  06_mini_agent_doctor_executed.ipynb  07_codeworld_mcts.ipynb  07_codeworld_mcts_executed.ipynb  08_certainly_bridge.ipynb  08_certainly_bridge_executed.ipynb  09_fallback_infer_with_meta.ipynb  09_fallback_infer_with_meta_executed.ipynb  10_auto_router_one_liner.ipynb  10_auto_router_one_liner_executed.ipynb  11_provider_perplexity.ipynb  11_provider_perplexity_executed.ipynb  12_provider_openai.ipynb  13_provider_anthropic.ipynb  13_provider_anthropic_executed.ipynb  14_provider_matrix.ipynb  14_provider_matrix_executed.ipynb  15_tenacious_single_model.ipynb  README.md
patches/: codeworld-mcts.patch
scenarios/: README.md  certainly_adapter_demo.py  certainly_bridge_release.py  certainly_router_release.py  codeworld_baseline_vs_mcts.py  codeworld_bridge_release.py  codeworld_eval_smoke.py  codeworld_judge_live.py  codeworld_mcts_chutes_autogen.py  codeworld_router_release.py  codex_agent_regression_check.py  coq_bridge_release.py  (+11 more)
(+241 files in other folders)
